alignment issues, details fix

--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -2,12 +2,13 @@
   min-height: var(--page_height);
   display: flex;
   flex-direction: column;
-  padding: 0.5em 2em;
+  /* padding: 0.5em 2em; */
   gap: 1em;
 
   justify-content: space-between;
   /*TODO:*/
-  margin-bottom: 3em;
+  /* padding-bottom: 4em; */
+  padding: 1em 2em 4em 2.5em;
 }
 .img {
   align-self: center;
