--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -8,7 +8,8 @@
   width: 100%;
   /* gap: 2em; */
   justify-content: space-around;
-  padding: 0.5em 2em;
+  padding: var(--padding_no_bottom);
+
   text-align: center;
 }
 
