--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,18 +5,21 @@
   background-size: cover;
   background-blend-mode: darken;
   color: var(--white);
-}
-.content {
-  height: 100%;
+
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   gap: 1em;
   padding: 1em 2em 0 2.5em;
 }
+
 .wrap h1 {
   border-left: 8px solid var(--orange2);
   padding-left: 0.3em;
+}
+.wrap h2 {
+  font-size: 32px;
 }
 .btns {
   width: fit-content;
@@ -32,10 +35,10 @@
   flex-direction: column;
   gap: 1em;
 }
-.wideWrap {
+/* .wideWrap {
   padding-bottom: 3em;
   background-color: var(--orange2);
-}
+} */
 @media (min-width: 1023px) {
   .wideWrap {
     display: flex;
