--- a/app/portfolio/page.module.css
+++ b/app/portfolio/page.module.css
@@ -2,12 +2,13 @@
   background-color: var(--black);
   color: var(--white);
   width: 100%;
-  padding: 0.5em 2em;
+  /* padding: 0.5em 2em; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   gap: 1em;
-  padding-bottom: 4em;
+  /* padding-bottom: 4em; */
+  padding: 1em 2em 4em 2.5em;
 }
 
 .wrap span {
