--- a/components/permanentBar/permanentBar.module.css
+++ b/components/permanentBar/permanentBar.module.css
@@ -30,3 +30,10 @@
 .wrap a {
   color: var(--white);
 }
+@media (max-width: 1023px) {
+  .wrap {
+    flex-direction: column;
+    height: 3em;
+    gap: 0;
+  }
+}
